# tolua_runtime

./: .gitignore  CMakeLists.txt  README.md  build_arm.sh  build_ios.sh  int64.c  lua.def  onekeybuild_android.sh  onekeybuild_ios.sh  onekeybuild_osx.sh  prebuild_win-step1.sh  prebuild_win-step2.sh  pullallsrc-general.sh  pullallsrc.sh  tolua.c  tolua.h  uint64.c  各平台编译说明.md
android/jni/: Android.mk
cjson/: lua_cjson.c
cmake/: android.toolchain.cmake
iOS/tolua.xcodeproj/: project.pbxproj
protobuf/include/google/protobuf/: any.h  any.pb.h  api.pb.h  arena.h  arena_impl.h  arenastring.h  descriptor.h  descriptor.pb.h  descriptor_database.h  duration.pb.h  dynamic_message.h  empty.pb.h  extension_set.h  field_mask.pb.h  generated_enum_reflection.h  generated_enum_util.h  generated_message_reflection.h  generated_message_table_driven.h  generated_message_util.h  has_bits.h  implicit_weak_message.h  inlined_string_field.h  map.h  map_entry.h  map_entry_lite.h  map_field.h  map_field_inl.h  map_field_lite.h  map_type_handler.h  message.h  message_lite.h  metadata.h  metadata_lite.h  reflection.h  reflection_ops.h  repeated_field.h  service.h  source_context.pb.h  struct.pb.h  text_format.h  (+7 more)
protobuf/include/google/protobuf/compiler/: code_generator.h  command_line_interface.h  importer.h  parser.h  plugin.h  plugin.pb.h
protobuf/include/google/protobuf/compiler/cpp/: cpp_generator.h
protobuf/include/google/protobuf/compiler/csharp/: csharp_generator.h  csharp_names.h
protobuf/include/google/protobuf/compiler/java/: java_generator.h  java_names.h
protobuf/include/google/protobuf/compiler/js/: js_generator.h  well_known_types_embed.h
protobuf/include/google/protobuf/compiler/objectivec/: objectivec_generator.h  objectivec_helpers.h
protobuf/include/google/protobuf/compiler/php/: php_generator.h
protobuf/include/google/protobuf/compiler/python/: python_generator.h
protobuf/include/google/protobuf/compiler/ruby/: ruby_generator.h
protobuf/include/google/protobuf/io/: coded_stream.h  gzip_stream.h  printer.h  strtod.h  tokenizer.h  zero_copy_stream.h  zero_copy_stream_impl.h  zero_copy_stream_impl_lite.h
protobuf/include/google/protobuf/stubs/: bytestream.h  callback.h  casts.h  common.h  fastmem.h  hash.h  logging.h  macros.h  mutex.h  once.h  platform_macros.h  port.h  singleton.h  status.h  stl_util.h  stringpiece.h  template_util.h
protobuf/include/google/protobuf/util/: delimited_message_util.h  field_comparator.h  field_mask_util.h  json_util.h  message_differencer.h  time_util.h  type_resolver.h  type_resolver_util.h
window/x86/: luajit.lib
window/x86_64/: lua51.lib  luajit.lib
